--- a/pom.xml
+++ b/pom.xml
@@ -10,16 +10,7 @@
   <packaging>jar</packaging>
 
   <name>nominatim-client</name>
-  <description>Nominatim Geocoder Client</description>
-
-  <!--
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.1.RELEASE</version>
-    <relativePath/>
-  </parent>
-  -->
+  <description>Nominatim Geocoding Client</description>
 
   <properties>
     <github.global.server>github</github.global.server>
