--- a/pom.xml
+++ b/pom.xml
@@ -140,8 +140,8 @@
   <dependencies>
     <dependency>
       <groupId>org.bremersee</groupId>
-      <artifactId>common</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <artifactId>common-base</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.bremersee</groupId>
